--- a/models/env_db/modular-world/modular_1_5m/model.config
+++ b/models/env_db/modular-world/modular_1_5m/model.config
@@ -1,6 +1,6 @@
 <?xml version='1.0'?>
 <model>
-    <name>modular_2m</name>
+    <name>modular-world/modular_1_5m</name>
     <version>1.0</version>
     <sdf version='1.6'>model.sdf</sdf>
     <author>
