--- a/src/gazebo_simulation/CMakeLists.txt
+++ b/src/gazebo_simulation/CMakeLists.txt
@@ -167,15 +167,18 @@ INCLUDE(src/tof_sensor_emulation/CMakeLists.txt)
 ## Install ##
 #############
 
+#Setup python
+catkin_python_setup()
+
 # all install targets should use catkin DESTINATION variables
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+ install(PROGRAMS
+   scripts/start_simulation_groundtruth.py
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+ )
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
