--- a/src/gazebo_simulation/CMakeLists.txt
+++ b/src/gazebo_simulation/CMakeLists.txt
@@ -58,11 +58,11 @@ include_directories(SYSTEM {OpenCV_INCLUDE_DIRS})
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
+ add_message_files(
+   FILES
+	 MissionMode.msg
 #   Message2.msg
-# )
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -76,12 +76,6 @@ include_directories(SYSTEM {OpenCV_INCLUDE_DIRS})
 #   FILES
 #   Action1.action
 #   Action2.action
-# )
-
-## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
 # )
 
 ################################################
@@ -117,6 +111,7 @@ catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES pre_cropping
 #  CATKIN_DEPENDS gazebo_ros_pkgs
+	CATKIN_DEPENDS message_runtime
   DEPENDS roscpp gazebo_ros
 )
 
@@ -213,3 +208,7 @@ catkin_python_setup()
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+if(CATKIN_ENABLE_TESTING)
+	find_package(rostest REQUIRED)
+	add_rostest(test/simulation_test.test)
+endif()
