--- a/src/gazebo_groundtruth/CMakeLists.txt
+++ b/src/gazebo_groundtruth/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-project(gazebo_simulation)
+project(gazebo_groundtruth)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,26 +8,16 @@ project(gazebo_simulation)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  cv_bridge
-  eigen_conversions
-  image_transport
-  gazebo_ros
-  common
-  state_estimation_msgs
-  )
+#find_package(catkin REQUIRED COMPONENT
+#	common
+#  state_estimation_msgs
+#  )
 
 ## System dependencies are found with CMake's conventions
 
 # Depend on system install of Gazebo
 #find_package(Boost REQUIRED COMPONENTS)
 find_package(gazebo REQUIRED)
-find_package(Eigen3 REQUIRED)
-find_package(PCL REQUIRED)
-find_package(OpenCV REQUIRED COMPONENTS core imgproc calib3d video aruco)
-include_directories(SYSTEM {OpenCV_INCLUDE_DIRS})
-
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
@@ -56,13 +46,6 @@ include_directories(SYSTEM {OpenCV_INCLUDE_DIRS})
 ##     and list every .msg/.srv/.action file to be processed
 ##   * uncomment the generate_messages entry below
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
-
-## Generate messages in the 'msg' folder
-# add_message_files(
-#  FILES
-#	 MissionMode.msg
-#   Message2.msg
-# )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -111,8 +94,8 @@ catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES pre_cropping
 #  CATKIN_DEPENDS gazebo_ros_pkgs
-	CATKIN_DEPENDS message_runtime
-  DEPENDS roscpp gazebo_ros
+#	CATKIN_DEPENDS message_runtime
+#  DEPENDS roscpp gazebo_ros
 )
 
 ###########
@@ -123,14 +106,14 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
 #  include
-  ${Boost_INCLUDE_DIR}
-  ${catkin_INCLUDE_DIRS}
+#  ${Boost_INCLUDE_DIR}
+#  ${catkin_INCLUDE_DIRS}
   ${GAZEBO_INCLUDE_DIRS}
-  ${Eigen_INCLUDE_DIRS}
-  ${PCL_INCLUDE_DIRS}
+	#  ${Eigen_INCLUDE_DIRS}
+	#  ${PCL_INCLUDE_DIRS}
 )
 
-add_subdirectory(src/model_plugins/vehicle_simulation_link)
+#add_subdirectory(src/model_plugins/vehicle_simulation_link)
 #add_subdirectory(src/pre_cropping)
 
 ## Add cmake target dependencies of the library
@@ -153,9 +136,9 @@ add_subdirectory(src/model_plugins/vehicle_simulation_link)
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-INCLUDE(src/pre_cropping/CMakeLists.txt)
+#INCLUDE(src/pre_cropping/CMakeLists.txt)
 
-INCLUDE(src/tof_sensor_emulation/CMakeLists.txt)
+#INCLUDE(src/tof_sensor_emulation/CMakeLists.txt)
 
 
 #############
@@ -163,17 +146,13 @@ INCLUDE(src/tof_sensor_emulation/CMakeLists.txt)
 #############
 
 #Setup python
-#catkin_python_setup()
+catkin_python_setup()
 
 # all install targets should use catkin DESTINATION variables
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-	 #   scripts/start_simulation_groundtruth.py
-	 #    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-	 # )
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
@@ -210,5 +189,5 @@ INCLUDE(src/tof_sensor_emulation/CMakeLists.txt)
 # catkin_add_nosetests(test)
 if(CATKIN_ENABLE_TESTING)
 	find_package(rostest REQUIRED)
-	#	add_rostest(test/simulation_test.test)
+	add_rostest(test/road.test)
 endif()
