Incorporate gazebo-utils into this repo

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ msg-tags
 
 # Ignore Datasets folder
 datasets
+
+models/env_db/default-road/model.config
+
+models/env_db/default-road/commonroad.xml
