Adjusted and fixed ci yaml.
Removed git clone from old utils repo and added catkin_make

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,39 +24,22 @@ before_script:
   #- ls $KITCAR_REPO_PATH
   #- git lfs pull
   - export KITCAR_REPO_PATH=/builds/kitcar/
-  - if [ -d "kitcar-gazebo-utils" ]; then
-  - mv kitcar-gazebo-utils $KITCAR_REPO_PATH/kitcar-gazebo-utils
-  - fi
   - if [ -d "kitcar-ros" ]; then
   - mv kitcar-ros $KITCAR_REPO_PATH/kitcar-ros
   - fi
 after_script:
   - export KITCAR_REPO_PATH=/builds/kitcar/
-  - if [ -d "$KITCAR_REPO_PATH/kitcar-gazebo-utils" ]; then
-  - mv $KITCAR_REPO_PATH/kitcar-gazebo-utils kitcar-gazebo-utils 
-  - fi
   - if [ -d "$KITCAR_REPO_PATH/kitcar-ros" ]; then
   - mv $KITCAR_REPO_PATH/kitcar-ros kitcar-ros
   - fi
   - ls $KITCAR_REPO_PATH
 
 stages:
-  - setup
+  - build
   - test
-    # - test-simulation
 
-setup-utils:
-  stage: setup
-  script: &setup
-    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@git.kitcar-team.de/kitcar/kitcar-gazebo-utils.git $KITCAR_REPO_PATH/kitcar-gazebo-utils
-    #Also clone kitcar-ros
-  artifacts:
-    paths:
-      - kitcar-gazebo-utils
-    expire_in: 4 hrs
-  
 build:
-    stage: setup
+    stage: build
     script: &build-all
         - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@git.kitcar-team.de/kitcar/kitcar-ros.git $KITCAR_REPO_PATH/kitcar-ros
         - cd $KITCAR_REPO_PATH/kitcar-ros
@@ -75,6 +58,7 @@ build:
         - cd  $KITCAR_REPO_PATH/kitcar-ros/KITcar_debugger
         - catkin_make #-DCMAKE_BUILD_TYPE=Coverage
         - cd  $KITCAR_REPO_PATH/kitcar-gazebo-simulation
+        - catkin_make
     artifacts:
         paths:
         - kitcar-ros
@@ -94,7 +78,6 @@ build:
 test-road:
   stage: test
   dependencies:
-    - setup-utils
     - build
   script: &test-road
     - source init/bashrc # The order of these source commands seems relevant?
