--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,8 +35,24 @@ after_script:
   - ls $KITCAR_REPO_PATH
 
 stages:
+  - prebuild-test # Some tests are performed before building, to filter easy mistakes
   - build
   - test
+
+
+# Test if dr_drift generation script works
+test-dr_drift:
+    stage: prebuild-test
+    script: &prebuild-dr_drift
+        - cd models/model_db/dr_drift
+        - ./generate.sh
+        #TODO: Also test if the calibration is actually correct.
+
+test-road-generation:
+  stage: prebuild-test
+  script: &prebuild-generation
+    - cd models/env_db
+    - ./generate.sh -r default-road
 
 build:
     stage: build
