--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,6 +100,7 @@ test-road:
     - source $KITCAR_REPO_PATH/kitcar-ros/KITcar_external/devel/setup.bash --extend
     - source $KITCAR_REPO_PATH/kitcar-ros/KITcar_brain/devel/setup.bash --extend
     - source $KITCAR_REPO_PATH/kitcar-ros/KITcar_debugger/devel/setup.bash --extend
+    - source devel/setup.bash --extend
     - Xvfb :1 -screen 0 1600x1200x16  & # Needed for Gazebo
     - cd $KITCAR_REPO_PATH/kitcar-gazebo-simulation/models/env_db
     - ./generate.sh -r curves
