gazebo_groundtruth to simulation_groundtruth+simulation_evaluation and:
- RoadSectionMsg
- simulation_groundtruth contains groundtruth extraction and visualization node
-simulation_evaluation should contain nodes, that use simulation and groundtruth information to evaluate the driving

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,14 +81,6 @@ build:
         - devel
         - build
         expire_in: 6 hrs
-
-#test-utils:
-#  stage: pretest-build-1
-#  dependencies:
-#    - setup
-#  script: &test-utils
-#    - cd $KITCAR_REPO_PATH/kitcar-gazebo-simulation/models/env_db
-#    - ./generate.sh -r default-road
     
 
 test-road:
@@ -105,4 +97,4 @@ test-road:
     - cd $KITCAR_REPO_PATH/kitcar-gazebo-simulation/models/env_db
     - ./generate.sh -r curves
     - rostest gazebo_groundtruth road.test name:=curves # Still not functioning correctly yet / issues with lsan
-
+  when: manual
