Added startup process test

--- a/src/gazebo_simulation/CMakeLists.txt
+++ b/src/gazebo_simulation/CMakeLists.txt
@@ -210,5 +210,5 @@ INCLUDE(src/sensor_tof/CMakeLists.txt)
 # catkin_add_nosetests(test)
 if(CATKIN_ENABLE_TESTING)
 	find_package(rostest REQUIRED)
-	#	add_rostest(test/simulation_test.test)
+	add_rostest(test/start_road.test)
 endif()
