--- a/src/gazebo_simulation/param/sensor_camera/default.yaml
+++ b/src/gazebo_simulation/param/sensor_camera/default.yaml
@@ -10,8 +10,8 @@ output_end_y: 1024
 
 # Available noise types:
 # 0 -> off
-# 1 -> soft noise
-# 2 -> hard noise
+# 1 -> gaussian noise
+# 2 -> salt pepper noise
 noise_type: 0
 
 # Configure noise
