--- a/src/gazebo_simulation/package.xml
+++ b/src/gazebo_simulation/package.xml
@@ -10,10 +10,12 @@
   <license>TODO</license>
   <!-- <url type="website">http://wiki.ros.org/gazebo_simulation</url> -->
 
-	<buildtool_depend>catkin</buildtool_depend>
-	<build_depend>message_generation</build_depend>
-	<build_depend>rostest</build_depend>	
-	<exec_depend>message_runtime</exec_depend>
+  <depend>geometry_msgs</depend>
+
+  <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>rostest</build_depend>  
+  <exec_depend>message_runtime</exec_depend>
   <depend>gazebo_ros</depend>
   <depend>gazebo-plugins</depend>
   <depend>roscpp</depend>
