--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,10 @@
     default_language_version:
       python: python3.6
     repos:
+      - repo: https://github.com/ambv/black
+        rev: stable
+        hooks:
+          - id: black
       - repo: https://github.com/pre-commit/pre-commit-hooks
         rev: v2.0.0
         hooks:
