--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,15 @@ subprocess32==3.5.4
 tqdm==4.36.1
 PyGObject==3.34.0
 pre-commit==1.21.0
+Sphinx==2.4.2
+sphinx-celery==2.0.0
+sphinx-sitemap==0.3.1
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-plantuml==0.14
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.2.0
+
