Rename module utils/base to utils/geometry
The module utils/base was written with the intention of creating fundamental python classes to be used throughout the code.
Over time it became clear that  there's (currently) only a need for classes representing geometrical objects. The module should therefore be called geometry.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ test-dr_drift:
 test-utils:
   stage: prebuild-test
   script: &prebuild-test-utils
-    - python3 utils/base/module_test.py
+    - python3 utils/geometry/module_test.py
 
 test-road-generation:
   stage: prebuild-test
