Created node_base and parameter_handler classes in ros_base module.
NodeBase: A super class for ROS nodes which adds a parameter handler instance and other functionality.
ParameterObject: Allow to easily access and set ros parameters in a pythonic way.
+ Detailed documentation with examples

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ test-utils:
   stage: prebuild-test
   script: &prebuild-test-utils
     - python3 utils/geometry/module_test.py
+    - python3 utils/ros_base/test/parameter_object_test.py
 
 test-road-generation:
   stage: prebuild-test
