Refactoring&documentation of car_state_node
- Cleaned up file names
- Inherit from node_base
- Write parameters and topics into yaml files
- ROS test checking basic functionality of car_state_node

--- a/src/gazebo_simulation/CMakeLists.txt
+++ b/src/gazebo_simulation/CMakeLists.txt
@@ -227,4 +227,5 @@ INCLUDE(src/sensor_tof/CMakeLists.txt)
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest(launch/test/model_interface_node.test)
+  add_rostest(launch/test/car_state_node.test)
 endif()
