--- a/models/model_db/dr_drift/dr_drift.yaml
+++ b/models/model_db/dr_drift/dr_drift.yaml
@@ -50,10 +50,10 @@
         update_rate: 30
     },
     time_of_flight: {
-        'horizontal_fov':0.436,
+        'horizontal_fov': 0.0349, #~2 degrees
         capture: {
-            'width':10,
-            'height':10,
+            'width':2,
+            'height':2,
             'format':'L8'
         },
         clip: {
