ModelInterface: An easy way to communicate with gazebo
The model interface is used to communicate model states (pose&twist) with Gazebo. Through ROS services the State of a model can be retrieved and set. Additionally, the pose and twist can be modified.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,3 +100,12 @@ test-road-generation:
     - cd models/env_db
     - ./generate.sh -r default-road
     - ./generate.sh -r curves
+
+test-gazebo-simulation:
+  stage: test
+  script:
+    - cd models/env_db
+    - ./generate.sh -r curves
+    - cd $KITCAR_REPO_PATH/kitcar-gazebo-simulation
+    - catkin_make run_tests_gazebo_simulation -j1
+    - catkin_test_results # Ensure that pipeline fails when test fails
