--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ python-dateutil==2.8.0
 pytz==2019.2
 PyXB==1.2.6
 PyYAML==3.12
+ratelimit==2.2.1
 rospkg==1.1.10
 scipy==1.2.2
 Shapely==1.6.4.post2
